fixing layout bugs.

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,7 +2,7 @@
 .main-section {
   min-height: 900px;
   height: auto;
-  margin-top: 70px;
+  padding-top: 160px;
   background-color: var(--ice);
   top: -11px;
 
